K1J-1467: Implementation of aggregation of sick leave certificates from cs and it (#250)